# src/integration/integration.controller.ts
@@ -1,7 +1,22 @@
-import { Controller } from '@nestjs/common';
+import { Body, Controller, Post } from '@nestjs/common';
+import { ApiBody, ApiOkResponse, ApiTags } from '@nestjs/swagger';
+import { XimilarRequest } from './dto/ximilar.request';
+import { XimilarResponse } from './dto/ximilar.response';
 import { IntegrationService } from './integration.service';
 
 @Controller('integration')
+@ApiTags('Integration Module')
 export class IntegrationController {
     constructor(private readonly service: IntegrationService) {}
+
+    @Post('/ximilar/detect')
+    @ApiOkResponse({ type: XimilarResponse })
+    @ApiBody({ type: XimilarRequest })
+    async detectTags(
+        @Body() request: XimilarRequest,
+    ): Promise<XimilarResponse> {
+        const response = this.service.detectTags(request);
+
+        return response;
+    }
 }
